--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,7 @@
 homepage: "https://www.floriangoetting.de"
-documentation: "https://www.example.com/documentation"
+documentation: "https://github.com/floriangoetting/json-tag-variable"
 versions:
+  - sha: xxx
+    changeNotes: Updated metadata.yaml
   - sha: e40d5e0b903cbb45b506eba861bc9d610b4cb555
     changeNotes: Initial Commit
