--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,7 +1,7 @@
 homepage: "https://www.floriangoetting.de"
 documentation: "https://github.com/floriangoetting/json-tag-variable"
 versions:
-  - sha: xxx
+  - sha: bf46de8a3ac5d08c06dcdbdb9bfc2dfb8012eb8e
     changeNotes: Updated metadata.yaml
   - sha: e40d5e0b903cbb45b506eba861bc9d610b4cb555
     changeNotes: Initial Commit
