Add Option to enable and disable JSON cleaning

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,6 +1,8 @@
 homepage: "https://www.floriangoetting.de"
 documentation: "https://github.com/floriangoetting/json-tag-variable"
 versions:
+  - sha: xxx
+    changeNotes: Add Option to enable and disable JSON cleaning
   - sha: bf46de8a3ac5d08c06dcdbdb9bfc2dfb8012eb8e
     changeNotes: Updated metadata.yaml
   - sha: e40d5e0b903cbb45b506eba861bc9d610b4cb555
