--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,7 +1,7 @@
 homepage: "https://www.floriangoetting.de"
 documentation: "https://github.com/floriangoetting/json-tag-variable"
 versions:
-  - sha: xxx
+  - sha: 586b01b3196c34499c0a17dc0caaec428f696e0b
     changeNotes: Initial release.
   - sha: a74e6cbe6bc6dc5eb7e57a14b18ebd8f4640032b
     changeNotes: Add Library Settings to specify how the JSON Tag Library should be hosted
