--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 homepage: "https://www.floriangoetting.de"
 documentation: "https://github.com/floriangoetting/json-tag-variable"
 versions:
-  - sha: a48fbdd95232ba979c6e42512a0995dd6d9961c6
+  - sha: xxx
     changeNotes: Initial release.
