--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 homepage: "https://www.floriangoetting.de"
 documentation: "https://github.com/floriangoetting/json-tag-variable"
 versions:
-  - sha: ea67954df661b2b24e02f2d1f5d9890b489b89a2
+  - sha: xxx
     changeNotes: Initial release.
