--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 homepage: "https://www.floriangoetting.de"
 documentation: "https://github.com/floriangoetting/json-tag-variable"
 versions:
-  - sha: cef7a53e4c8b139ae1c570388eae6c17f97a67ba
+  - sha: xxx
     changeNotes: Initial release.
