--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 homepage: "https://www.floriangoetting.de"
 documentation: "https://github.com/floriangoetting/json-tag-variable"
 versions:
-  - sha: 551e9498322ad74d1c68ab466f1ddee70be0b133
+  - sha: xxx
     changeNotes: Initial release.
