--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,7 @@
 homepage: "https://www.floriangoetting.de"
 documentation: "https://github.com/floriangoetting/json-tag-variable"
 versions:
+  - sha: f9fa462e2ff35daf318479711429f1f1aec88250
+    changeNotes: Updated Template Description
   - sha: 7fcd05f199963c00c7dc9e60895312614139414b
     changeNotes: Initial release.
