--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,7 +1,7 @@
 homepage: "https://www.floriangoetting.de"
 documentation: "https://github.com/floriangoetting/json-tag-variable"
 versions:
-  - sha: xxx
+  - sha: 41ce78148505b6c6df0fbd61876ac77722ceb68d
     changeNotes: New Section "Debugging Settings" introduced with the option to manually set the x-gtm-server-preview	header in the requests for debugging purposes
   - sha: f9fa462e2ff35daf318479711429f1f1aec88250
     changeNotes: Updated Template Description
