--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,7 +1,7 @@
 homepage: "https://www.floriangoetting.de"
 documentation: "https://github.com/floriangoetting/json-tag-variable"
 versions:
-  - sha: xxx
+  - sha: 9e5996c757326f904fe03a003d5dbd62d2ed8c45
     changeNotes: Update of the default JSON Tag Library version to 1.5.2 to support fetch keepalive requests which are preferred over navigator.sendBeacon
   - sha: 41ce78148505b6c6df0fbd61876ac77722ceb68d
     changeNotes: New Section "Debugging Settings" introduced with the option to manually set the x-gtm-server-preview	header in the requests for debugging purposes
