--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,6 +1,8 @@
 homepage: "https://www.floriangoetting.de"
 documentation: "https://github.com/floriangoetting/json-tag-variable"
 versions:
+  - sha: xxx
+    changeNotes: Update of the default JSON Tag Library version to 1.5.3 to support the new response format of JSON Client with event batching support. If you are working with the JSON Client Response, please double check your implementation in client side GTM.
   - sha: 9e5996c757326f904fe03a003d5dbd62d2ed8c45
     changeNotes: Update of the default JSON Tag Library version to 1.5.2 to support fetch keepalive requests which are preferred over navigator.sendBeacon
   - sha: 41ce78148505b6c6df0fbd61876ac77722ceb68d
